# beast-json

./: .gitattributes  .gitignore  404.html  API_READINESS_REPORT.html  API_READINESS_REPORT.md  CLAUDE.md  CMakeLists.txt  Doxyfile  GETTING_STARTED.html  GITHUB_PAGE_TODO.md  README.md  TECHNICAL_REFERENCE.html  TEST_CASES.html  crash-1ae9ea19412a2a95a1f4e012323f86e3f4ef9bf4  crash-37c7b235c89a4cb0b07d9d5b11627a60de9572a1  crash-401181030fb81919fc77c959d4eea4b69ff15314  crash-6c9a1e7924b49b7a1f423dea868fa14ad40d08ed  crash-cf4b2561bc576fa86990001291e5e56b5b7c96a0  crash-da3642d5766e2d021b7ed4d65b7e2cc8660e0760  crash-f335bfad31a4a9f8eec293512ce9cc0199120ba3  hashmap.json  index.html  package-lock.json  sitemap.xml
.github/: dependabot.yml
api/: index.html
assets/: API_READINESS_REPORT.md.TdIncr1f.js  API_READINESS_REPORT.md.TdIncr1f.lean.js  GETTING_STARTED.md.DZv8tJ60.js  GETTING_STARTED.md.DZv8tJ60.lean.js  TECHNICAL_REFERENCE.md.DO9_zLO3.js  TECHNICAL_REFERENCE.md.DO9_zLO3.lean.js  TEST_CASES.md.C6OKiuqg.js  TEST_CASES.md.C6OKiuqg.lean.js  TEST_CASES.md.YRUgR81x.js  TEST_CASES.md.YRUgR81x.lean.js  api_index.md.Cw21hkg4.js  api_index.md.Cw21hkg4.lean.js  app.CwVQ3FMk.js  design_nexus_theory.md.BQY6dVVD.js  design_nexus_theory.md.BQY6dVVD.lean.js  guide_acknowledgments.md.BieRP0yw.js  guide_acknowledgments.md.BieRP0yw.lean.js  guide_allocators.md.oM7ikMNF.js  guide_allocators.md.oM7ikMNF.lean.js  guide_benchmarks.md.G1sQ-AoT.js  guide_benchmarks.md.G1sQ-AoT.lean.js  guide_bindings.md.BaiSjggU.js  guide_bindings.md.BaiSjggU.lean.js  guide_compile-time.md.BPriPXh8.js  guide_compile-time.md.BPriPXh8.lean.js  guide_correctness.md.IwNuJlE4.js  guide_correctness.md.IwNuJlE4.lean.js  guide_correctness.md.y7yRsLbe.js  guide_correctness.md.y7yRsLbe.lean.js  guide_debugging.md.RRi3itbH.js  guide_debugging.md.RRi3itbH.lean.js  guide_errors.md.B6exnxbo.js  guide_errors.md.B6exnxbo.lean.js  guide_getting-started.md.jm5PH63B.js  guide_getting-started.md.jm5PH63B.lean.js  guide_hft-patterns.md.bO0jqam5.js  guide_hft-patterns.md.bO0jqam5.lean.js  guide_introduction.md.CGWPljcH.js  guide_introduction.md.CGWPljcH.lean.js  guide_low-latency-patterns.md.BP50pzRt.js  (+27 more)
benchmarks/: CMakeLists.txt  bench.cpp  bench_all.cpp  bench_bindings.py  bench_deep_nesting.cpp  bench_file_io.cpp  bench_glaze.cpp  bench_hft.cpp  bench_quick.cpp  bench_ser_profile.cpp  bench_structs.cpp  utils.hpp
bindings/c/: CMakeLists.txt  beast_json_c.cpp  beast_json_c.h  qbuem_json_c.cpp  qbuem_json_c.h
design/: nexus_theory.html
docs/: API_READINESS_REPORT.md  ARCH_STRATEGY.md  GETTING_STARTED.md  GITHUB_PAGE_TODO.md  OPTIMIZATION_FAILURES.md  OPTIMIZATION_PLAN.md  PERFORMANCE.md  ROADMAP.md  TECHNICAL_REFERENCE.md  TEST_CASES.md  TODO.md  doxygen_custom.css  index.md  package-lock.json  package.json
fuzz/: CMakeLists.txt  fuzz_api_stress.cpp  fuzz_diff.cpp  fuzz_direct.cpp  fuzz_float.cpp  fuzz_nexus.cpp  fuzz_patch.cpp  fuzz_pmr.cpp  fuzz_roundtrip.cpp  gen_coverage.sh  json.dict
guide/: acknowledgments.html  allocators.html  benchmarks.html  bindings.html  compile-time.html  correctness.html  debugging.html  errors.html  getting-started.html  hft-patterns.html  introduction.html  low-latency-patterns.html  mapping.html  nexus-diagnostics.html  parsing.html  serialization.html  vision.html
tests/: CMakeLists.txt  repro_bugs.cpp  test_comments.cpp  test_complex_stl.cpp  test_duplicate_keys.cpp  test_errors.cpp  test_mutations.cpp  test_relaxed.cpp  test_rfc8259.cpp  test_stl_exhaustive.cpp  test_strict_number.cpp  test_trailing_commas.cpp  test_value_accessors.cpp
theory/: architecture.html  nexus-fusion.html  numeric-serialization.html  russ-cox.html  (+2 more)
(+519 files in other folders)
